# BriefPaws

./: .env.example  .gitignore  CONTEXT.md  README.md  pyproject.toml  run.py
data/: news_mock.jsonl
eval/: assertions.py  dataset.yaml
examples/pm_memo/: DEMO.md  README.md  generate_sample.py
examples/pm_memo/sample/20260714T024103Z_3ae9494b/: report.md  run.json
src/briefpaws/: __init__.py  analyst_llm.py  brief_logic.py  cli.py  config.py  llm_client.py  pipeline.py  reflection.py  report.py  triggers.py
src/briefpaws/graph/: __init__.py  nodes.py  research_graph.py  state.py
src/briefpaws/observability/: __init__.py  langfuse_tracer.py
src/briefpaws/schemas/: run.py
src/briefpaws/storage/: runs.py
src/briefpaws/tools/: indicators.py  news.py  price.py  price_mock.py
templates/: report_pm.md.j2  report_pre_market.md.j2
tests/: test_eval_dataset.py  test_pm_memo.py  test_reflection_hypothesis.py  test_slice1_cli.py
